WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218174
[EME][GStreamer] Fix logging in utilities
https://bugs.webkit.org/show_bug.cgi?id=218174
Summary
[EME][GStreamer] Fix logging in utilities
Xabier Rodríguez Calvar
Reported
2020-10-26 04:09:01 PDT
[EME][GStreamer] Fix logging in utilities
Attachments
Patch
(3.01 KB, patch)
2020-10-26 04:11 PDT
,
Xabier Rodríguez Calvar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2020-10-26 04:11:22 PDT
Created
attachment 412303
[details]
Patch
Philippe Normand
Comment 2
2020-10-26 04:42:15 PDT
Comment on
attachment 412303
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=412303&action=review
> Source/WebCore/platform/graphics/gstreamer/eme/GStreamerEMEUtilities.h:36 > +GST_DEBUG_CATEGORY_EXTERN(webkit_media_common_encryption_decrypt_debug_category);
OK I am lost in all the bugs you opened :) Why not handle everything in a single patch?
Xabier Rodríguez Calvar
Comment 3
2020-10-26 08:01:36 PDT
(In reply to Philippe Normand from
comment #2
)
> Comment on
attachment 412303
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=412303&action=review
> > > Source/WebCore/platform/graphics/gstreamer/eme/GStreamerEMEUtilities.h:36 > > +GST_DEBUG_CATEGORY_EXTERN(webkit_media_common_encryption_decrypt_debug_category); > > OK I am lost in all the bugs you opened :) Why not handle everything in a > single patch?
Don't get lost, they just have consecutive numbers almost all of them! Now speaking more serious, they tackled different things, at least most of them
EWS
Comment 4
2020-10-27 04:41:01 PDT
Committed
r269031
: <
https://trac.webkit.org/changeset/269031
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412303
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-10-27 04:42:23 PDT
<
rdar://problem/70717707
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug