[EME][GStreamer] Fix logging in utilities https://bugs.webkit.org/show_bug.cgi?id=218174

Reviewed by Philippe Normand.

There is some logging in GStreamerEMEUtilities.h that was not
using debugging categories properly. It does now.

* platform/graphics/gstreamer/eme/GStreamerEMEUtilities.h:
(WebCore::InitData::InitData):
* platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp:


Canonical link: https://commits.webkit.org/230922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269031 268f45cc-cd09-0410-ab3c-d52691b4dbfc